# ocl-pyramid-tests

./: CMakeLists.txt  Makefile  cl-helper.c  cl-helper.h  effects.c  effects.cpp  kernels.cl  pyramids.c  pyramids.cpp
